# akira

./: .gitignore  DYNAMIC_MCP_COMPLETE.md  DYNAMIC_MCP_FINAL.md  DYNAMIC_MCP_PROGRESS.md  DYNAMIC_MCP_TODO.md  MCP_TODO.md  README.md  TOKEN_OPTIMIZATION_TODO.md  hex_purge.py  index.html  package-lock.json  package.json  replace_all.py  tailwind.config.js  update_globals.py  update_taskcard.py  vite.config.ts
.akira/: config.json  rules.md
.kiro/specs/pi-dev-integration/: .config.kiro  design.md  requirements.md  tasks.md
docs/: CONCEPT_EDITOR_GIT_UPGRADE.md  PROVIDERS.md  STDIO_MCP_IMPLEMENTATION_PLAN.md  STYLING_OVERHAUL.md  korlap-adoption-plan.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/proptest-regressions/commands/: pi.txt
src-tauri/proptest-regressions/pi/: types_proptest.txt
src-tauri/src/: cli_router_core.rs  main.rs  pty_manager.rs  state.rs
src-tauri/src/cli_router/: queries.rs
src-tauri/src/commands/: agents.rs  akira_config.rs  chat.rs  cli.rs  engines.rs  fs.rs  git.rs  import.rs  mod.rs  pi.rs  pr.rs  project.rs  pty.rs  router.rs  rtk.rs  script_runner.rs  shell.rs  skills.rs  tasks.rs  workspaces.rs  worktree.rs
src-tauri/src/commands/streaming/: mod.rs
src-tauri/src/db/: mcp_queries.rs  mod.rs  pi_queries.rs  queries.rs  queries_patched.rs
src-tauri/src/mcp/: client.rs  commands.rs  manager.rs  mod.rs  transport.rs
src-tauri/src/models/: mod.rs
src-tauri/src/pi/: discovery.rs  discovery_proptest.rs  git_branch.rs  git_branch_proptest.rs  mod.rs  process_manager.rs  process_manager_proptest.rs  types.rs
src-tauri/src/streaming/: mod.rs
src/components/: DescriptionWithFileTag.tsx  ErrorBoundary.tsx  PtyTerminal.tsx  RecoveryModal.tsx  SettingsModal.tsx  TerminalPanel.tsx
src/components/AI/: AIWorkflowPanel.tsx  index.ts
src/components/Assessment/: AssessmentScheduler.tsx  ScheduleGroupForm.tsx  ScheduleGroupList.tsx  index.ts
src/components/Chat/: ChatBox.tsx  CompactionNotification.tsx  SessionStatsBar.tsx  TaskChat.tsx  TaskChatBox.tsx  ToolCallIndicator.tsx  index.ts
src/hooks/: index.ts  useAIWorkflow.ts  useAnalyzeProject.ts  useGitOperations.ts  useImageAnalysis.ts  useKeyboardShortcuts.ts  useTaskDrag.ts
src/lib/: cli.ts  commitMessage.ts  db.ts  git.ts  groq.ts  helpers.ts  index.ts  notify.ts  promptCompression.ts  providers.ts  queryRouter.ts  skills.ts  theme.ts  vision.ts  worktree.ts
src/lib/mcp/: test.ts  (+11 more)
src/scripts/: fix_colors.cjs  fix_colors.js
src/store/: aiChatStore.ts  analyzeStore.ts  assessmentStore.ts  configStore.ts  engineStore.ts  index.ts  mcpStore.ts  piStore.ts  skillStore.ts  taskStore.ts  terminalStore.ts  workspaceStore.ts  zoomStore.ts
src/styles/: globals.css
src/types/: assessment.ts  index.ts
(+105 files in other folders)
