[package]
name = "akira"
version = "1.0.0"
description = "AI-Powered Task & Code Workflow Manager"
authors = ["Akira Team"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.30", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
calamine = "0.24"
uuid = { version = "1.6", features = ["v4"] }
flate2 = "1.0"
tar = "0.4"
zip = "2"
dirs = "5"

[target.'cfg(unix)'.dependencies]
portable-pty = "0.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
