[package]
name = "akira"
version = "1.0.0"
description = "AI-Powered Task & Code Workflow Manager"
authors = ["Akira Team"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.30", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
calamine = "0.24"
uuid = { version = "1.6", features = ["v4"] }
flate2 = "1.0"
tar = "0.4"
zip = "2"
dirs = "5"
chrono = { version = "0.4.44", features = ["serde"] }
rand = "0.8"
hex = "0.4"
async-trait = "0.1"
thiserror = "1"
log = "0.4"

[target.'cfg(unix)'.dependencies]
portable-pty = "0.8"
libc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
